--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -43,6 +43,7 @@ forex:
     key: ${FOREX_API_KEY}
     url: "https://openexchangerates.org/api/latest.json?app_id={app_id}"
     base: "USD"
+    init-exchange-rates: true
 
 countries:
   api:
