--- a/crossfit-client/src/main/resources/application.yaml
+++ b/crossfit-client/src/main/resources/application.yaml
@@ -36,7 +36,7 @@ logging:
       nodeValue: WARN
     blog: WARN
 server:
-  port: 8081
+  port: 8080
 
 forex:
   api:
@@ -59,4 +59,5 @@ mail:
 
 workouts :
   api:
-    all-trainings-url: "http://localhost:8081/crossfit-api/get-all-trainings"
+    allTrainingsUrl: "http://localhost:8081/crossfit-api/get-all-trainings"
+    baseUrl: "http://localhost:8081/crossfit-api"
