--- a/crossfit-client/src/main/resources/application.yaml
+++ b/crossfit-client/src/main/resources/application.yaml
@@ -61,3 +61,10 @@ workouts :
   api:
     allTrainingsUrl: "http://localhost:8081/crossfit-api/get-all-trainings"
     baseUrl: "http://localhost:8081/crossfit-api"
+
+crossfit :
+  api :
+    mostRecentEvents : "http://localhost:8082/crossfit-community/events/most-recent"
+    publishUrl : "http://localhost:8082/crossfit-community/publish"
+    byIdUrl : "http://localhost:8082/crossfit-community/events/find/{id}"
+    allEvents: "http://localhost:8082/crossfit-community/publish"
