Test cases + Introduction to Captor

--- a/crossfit-client/src/test/resources/application.yaml
+++ b/crossfit-client/src/test/resources/application.yaml
@@ -45,3 +45,8 @@ crossfit:
     byIdUrl: "http://testing/find/{id}"
     allEvents: "http://testing/all"
     init-crossfit-events: false
+
+cloudinary :
+  cloud_name : "somename"
+  apiKey: "testkey"
+  apiSecret : "testsecret"
