--- a/crossfit-client/src/main/resources/application.yaml
+++ b/crossfit-client/src/main/resources/application.yaml
@@ -36,7 +36,8 @@ logging:
       hibernate:
         type:
           descriptor: TRACE
-        SQL: DEBUG
+
+        SQL: TRACE
       nodeValue: WARN
     blog: WARN
 server:
