--- a/crossfit-client/src/main/resources/application.yaml
+++ b/crossfit-client/src/main/resources/application.yaml
@@ -79,3 +79,7 @@ cloudinary :
   cloud_name : ${CLOUDINARY_NAME}
   apiKey: ${CLOUDINARY_API_KEY}
   apiSecret : ${CLOUDINARY_API_SECRET}
+
+jwt:
+   secret: ${JWT_KEY}
+   expiration: ${JWT_EXPIRATION}
