--- a/crossfit-trainings/src/main/resources/application.yaml
+++ b/crossfit-trainings/src/main/resources/application.yaml
@@ -5,13 +5,13 @@ spring:
       enabled: true
 
   jpa:
+    database-platform: org.hibernate.dialect.MySQLDialect
+    defer-datasource-initialization: true
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.MySQL8Dialect
-        format_sql: 'TRUE'
+        format_sql: true
     hibernate:
-      ddl-auto: update
-    open-in-view: 'false'
+        ddl-auto: update
   mvc:
     hiddenmethod:
       filter:
@@ -20,7 +20,7 @@ spring:
     driverClassName: com.mysql.cj.jdbc.Driver
     password: ${my_pass}
     username: ${my_username}
-    url: jdbc:mysql://localhost:3306/trainingsDB?allowPublicKeyRetrieval=true&useSSL=false&createDatabaseIfNotExist=true&serverTimezone=UTC
+    url: jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/trainingsDB?allowPublicKeyRetrieval=true&useSSL=false&createDatabaseIfNotExist=true&serverTimezone=UTC
   sql:
     init:
       mode: never
