--- a/crossfit-client/docker/docker-compose.yaml
+++ b/crossfit-client/docker/docker-compose.yaml
@@ -20,7 +20,7 @@ services:
     depends_on:
       db:
         condition: service_healthy
-    image: baldzhiyski/crossfit-trainings-final:v10
+    image: baldzhiyski/crossfit-trainings-final:v11
     ports:
       - "8081:8081"
 
@@ -33,7 +33,7 @@ services:
     depends_on:
       db:
         condition: service_healthy
-    image: baldzhiyski/crossfit-events-final:v10
+    image: baldzhiyski/crossfit-events-final:v11
     ports:
       - "8082:8082"
 
@@ -50,21 +50,21 @@ services:
       crossfit-community-events:
         condition: service_completed_successfully
 
-    image: baldzhiyski/crossfit-client-final:v10
+    image: baldzhiyski/crossfit-client-final:v11
     ports:
       - "8080:8080"
 
     environment:
-      - MYSQL_HOST=db
-      - MYSQL_PORT=3306
-      - CLOUDINARY_API_KEY=398775662192647
-      - CLOUDINARY_API_SECRET=GTGSdR1CAdyGEBvOf-sJ0O9USuc
-      - CLOUDINARY_NAME=dcazwzpwt
-      - FOREX_API_KEY=b90b7b54825a40a180b361f6910a0232
-      - JWT_EXPIRATION=6000
-      - JWT_KEY=ZycIWQvEWr7m1cwfOP1ATFmfC9KgHdz30FXP80iSzSDo3GyIbB
-      - MAIL_PASSWORD=somerandompassword
-      - MAIL_USER=somerandomusername
-      - EVENT_HOST=crossfit-community-events
-      - TRAININGS_HOST=crossfit-trainings
-      - remembermekey=topsecret
+      - MYSQL_HOST=${MYSQL_HOST}
+      - MYSQL_PORT=${MYSQL_PORT}
+      - CLOUDINARY_API_KEY=${CLOUDINARY_API_KEY}
+      - CLOUDINARY_API_SECRET=${CLOUDINARY_API_SECRET}
+      - CLOUDINARY_NAME=${CLOUDINARY_NAME}
+      - FOREX_API_KEY=${FOREX_API_KEY}
+      - JWT_EXPIRATION=${JWT_EXPIRATION}
+      - JWT_KEY=${JWT_KEY}
+      - MAIL_PASSWORD=${MAIL_PASSWORD}
+      - MAIL_USER=${MAIL_USER}
+      - EVENT_HOST=${EVENT_HOST}
+      - TRAININGS_HOST=${TRAININGS_HOST}
+      - remembermekey=${remembermekey}
