--- a/crossfit-client/docker/prometheus.yaml
+++ b/crossfit-client/docker/prometheus.yaml
@@ -20,4 +20,4 @@ scrape_configs:
     scheme: http
 
     static_configs:
-      - targets: ['host.docker.internal:8082']
+      - targets: ['host.docker.internal:8082','host.docker.internal:8080']
