--- a/crossfit-client/src/main/resources/application.yaml
+++ b/crossfit-client/src/main/resources/application.yaml
@@ -81,6 +81,12 @@ cloudinary :
   apiKey: ${CLOUDINARY_API_KEY}
   apiSecret : ${CLOUDINARY_API_SECRET}
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+
 #jwt:
 #  secret: ${JWT_KEY}
 #  expiration: ${JWT_EXPIRATION}
