Creating test for the event service and fixing a method for counting the revenue

--- a/crossfit-client/src/main/resources/application.yaml
+++ b/crossfit-client/src/main/resources/application.yaml
@@ -87,6 +87,9 @@ management:
       exposure:
         include: "*"
 
+rest:
+  configuration: prod
+
 #jwt:
 #  secret: ${JWT_KEY}
 #  expiration: ${JWT_EXPIRATION}
