--- a/crossfit-client/pom.xml
+++ b/crossfit-client/pom.xml
@@ -80,6 +80,17 @@
             <artifactId>hsqldb</artifactId>
             <scope>test</scope>
         </dependency>
+        <!-- Spring Boot Starter Cache -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-cache</artifactId>
+        </dependency>
+
+        <!-- Spring Boot Starter Data Redis -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
 
         <!-- Spring Boot Starter Actuator -->
         <dependency>
