--- a/crossfit-client/docker/docker-compose.yaml
+++ b/crossfit-client/docker/docker-compose.yaml
@@ -28,10 +28,11 @@ services:
     image: grafana/grafana:8.5.22
     ports:
       - 3000:3000
-#    environment:
-#      - GF_SECURITY_ALLOW_EMBEDDING=true
-#      - GF_AUTH_ANONYMOUS_ENABLED=true
-#      - GF_AUTH_ANONYMOUS_ORG_ROLE=Viewer
+
+  redis:
+    image: redis
+    ports:
+      - "6379:6379"
 
 #  crossfit-trainings:
 #    depends_on:
