Adjustments for the docker-compose file and extracting some messages

--- a/crossfit-client/src/main/resources/application.yaml
+++ b/crossfit-client/src/main/resources/application.yaml
@@ -35,8 +35,8 @@ spring:
             scope: user:email
   data:
     redis:
-      host: localhost
-      port: 6379
+      host: ${REDIS_HOST:localhost}
+      port: ${REDIS_PORT:6379}
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
     password: ${my_pass:}
